# python-vendorize

./: .gitignore  makefile  pyproject.toml
