[tool.poetry]
name = "vendorize"
version = "0.3.0"
description = "Vendorize packages from PyPI"
authors = ["Michael Williamson"]
license = "BSD-2-Clause"
readme = "README.rst"
repository = "http://github.com/mwilliamson/python-vendorize"
packages = [
    { include = "vendorize" },
    { include = "tests"},
]

[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pytest"
vendorize = "vendorize.cli:main"
python-vendorize = "vendorize.cli:main"

[tool.poetry.group.test.dependencies]
pytest = "^6.2.4"
spur = ">=0.3.19,<0.4"
tempman = ">=0.1.3,<0.2"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "*_tests.py"


[tool.python-vendorize]
command = "vendorize.cli:main"

[tool.test]
command = "pytest"
